# rules_flatbuffers

./: CHANGELOG.md  README.md
examples/cc_example/: WORKSPACE
examples/cc_example/cc_example/: BUILD.bazel  main.cc
examples/cc_example/geom_fbs/: BUILD.bazel  isometry.fbs  polygon.fbs  quaternion.fbs  vector.fbs
examples/cc_example/viz_fbs/: BUILD.bazel  marker.bfbs  marker.fbs
flatbuffers/: cc_flatbuffers_library.bzl  flatbuffers_lang_toolchain.bzl  flatbuffers_library.bzl  flatbuffers_toolchain.bzl  repositories.bzl
flatbuffers/internal/: BUILD.lang_toolchain.tpl  BUILD.toolchain.tpl  flatbuffers_lang_toolchain_gen.bzl  flatbuffers_toolchain_gen.bzl  run_flatc.bzl  string_utils.bzl
flatbuffers/private/: BUILD.toolchain.tpl  flatbuffers_lang_toolchain_gen.bzl  flatbuffers_toolchain_gen.bzl  run_flatc.bzl
flatbuffers/toolchain_defs/: cc_defs.bzl  schema_defs.bzl  toolchain_defs.bzl
flatbuffers/toolchains/: BUILD.bazel  cc_flatbuffers_toolchain.bzl  schema_flatbuffers_toolchain.bzl
