load("//flatbuffers/toolchains:cc_flatbuffers_toolchain.bzl", "cc_flatbuffers_toolchain")
load("//flatbuffers/toolchains:schema_flatbuffers_toolchain.bzl", "schema_flatbuffers_toolchain")

schema_flatbuffers_toolchain(
    name = "default_schema_flatbuffers_toolchain",
    visibility = ["//visibility:public"],
)

cc_flatbuffers_toolchain(
    name = "default_cc_flatbuffers_toolchain",
    visibility = ["//visibility:public"],
)
